<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"

                        android:background="@color/color1">


    <item
            android:id="@+id/like"
                android:title="@string/liked"
                    android:orderInCategory="200"
                        app:showAsAction="never|withText"/>
    <item
            android:id="@+id/repost"
                android:orderInCategory="100"
                    android:title="@string/repost"
                        app:showAsAction="never|withText"/>
    <item
            android:id="@+id/admin"
                    android:title="@string/admin"
                        android:orderInCategory="100"
                            app:showAsAction="never|withText"/>

</menu>
